--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "handlebars-helper-equal": "^1.0.0",
     "hbs": "^4.1.2",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
